GitOps/Application/test.yaml
---
# Source: app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'argo-plugin-plugin'
  labels:
    app.kubernetes.io/name: argo-plugin
    app.kubernetes.io/instance: test
    app.kubernetes.io/part-of: argo-plugin
    app.kubernetes.io/managed-by: argocd
    app.openshift.io/runtime: nodejs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argo-plugin
    app.kubernetes.io/instance: test
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
# Source: app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'argo-plugin-plugin'
  labels:
    app.kubernetes.io/name: argo-plugin
    app.kubernetes.io/instance: test
    app.kubernetes.io/part-of: argo-plugin
    app.kubernetes.io/managed-by: argocd
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-plugin
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-plugin
        app.kubernetes.io/instance: test
        app.kubernetes.io/part-of: argo-plugin
        app.kubernetes.io/managed-by: argocd
        app.openshift.io/runtime: nodejs
      annotations:
        checksum/config: 89d879fa3272461752043210dacdffbd39b66b94e19f75b900ab2c6e9db58066
    spec:
      containers:
        - name: plugin
          image: quay.io/thason/argocd-appset-plugin:8fbd529
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: http
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http
          volumeMounts:
            - mountPath: /var/run/argo/token
              name: token
            - mountPath: /tmp/config/
              name: applications
      volumes:
        - Secret:
            key: token
            name: argocd-app-set-plugin-token
          name: token
        - configMap:
            name: applicationset-file
          name: applications
---
# Source: app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'argo-plugin-plugin'
  labels:
    app.kubernetes.io/name: argo-plugin
    app.kubernetes.io/instance: test
    app.kubernetes.io/part-of: argo-plugin
    app.kubernetes.io/managed-by: argocd
    app.openshift.io/runtime: nodejs
  annotations:
    route.openshift.io/termination: edge 
    route.openshift.io/destination-ca-certificate-secret: plugin-ca-cert
spec:
  rules:
  - host: plugin-argo-plugin-openshift-gitops.apps-crc.testing
    http:
      paths:
      - backend:
          service:
            name: 'argo-plugin-plugin'
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - {}
